# AI-devs-4-solutions

./: .env.example  .gitignore  AGENTS.md  README.md  fire_in_the_hole.py  pyproject.toml  repo_env.py  task_menu.py
categorize/: solve_categorize.py  test_solve_categorize.py
devs_utilities/: __init__.py  ag3nts.py  bootstrap.py  env.py  files.py  flags.py  http.py  logging.py  openrouter.py  prompts.py  repo_env.py  test_http.py  test_openrouter.py
domatowo/: log_classifier_system_prompt.txt  planner_system_prompt.txt  solve_domatowo.py  test_solve_domatowo.py
drone/: solve_drone.py  test_solve_drone.py
electricity/: solve_electricity.py  test_solve_electricity.py
failure/: final_logs.txt  solve_failure.py  test_solve_failure.py
filesystem/: solve_filesystem.py  test_solve_filesystem.py
findhim/: solve_findhim.py
firmware/: solve_firmware.py  system_prompt.txt
foodwarehouse/: solve_foodwarehouse.py
goingthere/: solve_goingthere.py
mailbox/: README.md  solve_mailbox.py
negotiations/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  submit_tools.py  test_catalog.py  test_submit_tools.py
negotiations/src/negotiations_api/: __init__.py  catalog.py  config.py  server.py
okoeditor/: solve_okoeditor.py
people/: filter_people.py  filter_system_prompt.txt  find-agent.py  findhim_result.json  people_result.json  people_with_adam_result.json
proxy/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
proxy/src/proxy_api_server/: __init__.py  config.py  models.py  openrouter.py  packages_api.py  server.py
(+71 files in other folders)
