[project]
name = "negotiations-api-server"
version = "0.1.0"
description = "HTTP tool server for the AG3NTS negotiations task"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ngrok>=1.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
